// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tooltip Highscore 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomRightRadius": 5,
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "elevation": 4,
        "flexDirection": "row",
        "marginLeft": 5,
        "marginRight": 1,
        "padding": 16,
        "paddingRight": 32,
        "shadowColor": "#14171A",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ECEFF1",
          "borderRadius": 19,
          "height": 38,
          "justifyContent": "center",
          "width": 38,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={21}
        bbWidth={21}
        color={4294748211}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 21,
              "width": 21,
            },
            Object {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        tintColor={4294748211}
        vbHeight={16}
        vbWidth={16}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M8 0l1.888 6.111H16L11.056 9.89 12.944 16 8 12.223 3.056 16l1.888-6.111L0 6.11h6.112z"
            fill={4294748211}
            fillRule={1}
            propList={
              Array [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 15,
                }
              }
            >
              Foo bar
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#FFFFFF",
        "borderColor": "transparent",
        "borderRightColor": "#FFFFFF",
        "borderStyle": "solid",
        "borderWidth": 10,
        "bottom": 0,
        "height": 14,
        "left": 0,
        "position": "absolute",
        "width": 16,
      }
    }
  />
</View>
`;

exports[`Storyshots Tooltip Unlock 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomRightRadius": 5,
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "elevation": 4,
        "flexDirection": "row",
        "marginLeft": 5,
        "marginRight": 1,
        "padding": 16,
        "paddingRight": 32,
        "shadowColor": "#14171A",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ECEFF1",
          "borderRadius": 19,
          "height": 38,
          "justifyContent": "center",
          "width": 38,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={21}
        bbWidth={21}
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "height": 21,
              "width": 21,
            },
            Object {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={25}
        vbWidth={16}
      >
        <RNSVGGroup>
          <RNSVGPath
            d="M1.27 7.231l.903 5.121 1.477-.26-.903-5.121a4.481 4.481 0 013.65-5.213L6.137.28C2.887.854.697 3.98 1.27 7.23"
            fill={4287466893}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M13.406 7.528l-1.477.26-.417-2.363c-.434-2.462-2.751-4.084-5.115-3.667L6.137.28c3.25-.574 6.378 1.617 6.95 4.866l.319 2.381z"
            fill={4291875024}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M8.3 11.4H1.6c-.6 0-1.2.5-1.2 1.2v10.8c0 .6.5 1.2 1.2 1.2h6.7V11.4"
            fill={4294364507}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M8.2 11.4h6.6c.6 0 1.1.5 1.1 1.2v10.8c0 .6-.5 1.2-1.1 1.2H8.2V11.4"
            fill={4294291263}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M1.5 23.4h6.9V12.5H1.5z"
            fill={4294291263}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M8.2 23.4h6.6V12.5H8.2z"
            fill={4294364507}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M9.8 16.7c0-.9-.7-1.6-1.6-1.6-.9 0-1.6.7-1.6 1.6s.7 1.6 1.6 1.6c.8.1 1.6-.7 1.6-1.6"
            fill={4278403416}
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGPath
            d="M8.9 16.7c0-.4-.4-.8-.8-.8s-.8.4-.8.8V20c0 .4.4.8.8.8s.8-.4.8-.8v-3.3"
            fill={4278403416}
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View>
        <View
          style={Object {}}
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#14171A",
                  "fontSize": 15,
                }
              }
            >
              Foo bar
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#FFFFFF",
        "borderColor": "transparent",
        "borderRightColor": "#FFFFFF",
        "borderStyle": "solid",
        "borderWidth": 10,
        "bottom": 0,
        "height": 14,
        "left": 0,
        "position": "absolute",
        "width": 16,
      }
    }
  />
</View>
`;
